cambios en el tamnio de letra y tamanio de imagen

--- a/TransportesM.html
+++ b/TransportesM.html
@@ -22,7 +22,7 @@
     </nav>
     <section>
         <div class="card">
-            <h1 style="text-align: center;">Barco</h1>
+            <h1 style="text-align: center;" class="animated infinite bounceOut">Barco</h1>
             <div class="div-imagen">
 
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
@@ -33,14 +33,14 @@
                     <p style="text-align: left;">Tipo De Motor: 4 Tiempos</p>
                     <p style="text-align: right;">Disponibles:5</p>
                 </div>
-                <img class="desvanecer" src="galeria/m2.jpeg" width="350" height="350" />
+                <img class="desvanecer" src="galeria/m2.jpeg" width="350" height="370" />
             </div>
             <div class="botones">
                 <button class="button1">Reservar</button>
             </div>
         </div>
         <div class="card">
-            <h1>Barco de Cobotaje</h1>
+            <h1>Cabotaje</h1>
             <div class="div-imagen">
 
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
@@ -51,7 +51,7 @@
                     <p style="text-align: left;">Tipo De Motor: 4 Tiempos</p>
                     <p style="text-align: right;">Disponibles:5</p>
                 </div>
-                <img class="desvanecer" src="galeria/m2.jpg" width="350" height="350" />
+                <img class="desvanecer" src="galeria/m2.jpg" width="350" height="360" />
             </div>
             <div class="botones">
 
@@ -72,7 +72,7 @@
                     <p style="text-align: left;">Tipo De Motor: 4 Tiempos</p>
                     <p style="text-align: right;">Disponibles:5</p>
                 </div>
-                <img class="desvanecer" src="galeria/m4.jpeg" width="350" height="350" />
+                <img class="desvanecer" src="galeria/m4.jpeg" width="350" height="360" />
             </div>
             <div class="botones">
 
@@ -126,7 +126,7 @@
             <h1>velero</h1>
             <div class="div-imagen">
 
-                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
+                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px;">
                     <p style="text-align: left;">Tipo:terrestre</p>
                     <p style="text-align: left;">Marca:toyota</p>
                     <p style="text-align: left;">Color:Rojo</p>
