--- a/TransportesT.html
+++ b/TransportesT.html
@@ -7,6 +7,7 @@
     <title>Inicio</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/animate.css">
 
 </head>
 
@@ -23,10 +24,10 @@
     </nav>
     <section>
         <div class="card">
-            <h1 style="text-align: center;">Motocicletas</h1>
+            <h1 style="text-align: center;" class="animated infinite    slideOutLeft">Motocicletas</h1>
             <div class="div-imagen">
 
-                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
+                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px;">
                     <p style="text-align: left;">Tipo:terrestre</p>
                     <p style="text-align: left;">Marca:toyota</p>
                     <p style="text-align: left;">Color:Rojo</p>
@@ -41,10 +42,10 @@
             </div>
         </div>
         <div class="card">
-            <h1>Autobus</h1>
+            <h1 class="animated infinite bounceInDown">Autobus</h1>
             <div class="div-imagen">
 
-                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
+                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px;">
                     <p style="text-align: left;">Tipo:terrestre</p>
                     <p style="text-align: left;">Marca:toyota</p>
                     <p style="text-align: left;">Color:Rojo</p>
@@ -62,10 +63,10 @@
         </div>
 
         <div class="card">
-            <h1>Bicicleta</h1>
+            <h1 class="animated infinite slideOutUp">Bicicleta</h1>
             <div class="div-imagen">
 
-                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
+                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px;">
                     <p style="text-align: left;">Tipo:terrestre</p>
                     <p style="text-align: left;">Marca:toyota</p>
                     <p style="text-align: left;">Color:Rojo</p>
@@ -85,10 +86,10 @@
     </section>
     <section>
         <div class="card">
-            <h1 style="text-align: center;">camion</h1>
+            <h1 class="animated infinite slideOutUp" style="text-align: center;">camion</h1>
             <div class="div-imagen">
 
-                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
+                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px;">
                     <p style="text-align: left;">Tipo:terrestre</p>
                     <p style="text-align: left;">Marca:toyota</p>
                     <p style="text-align: left;">Color:Rojo</p>
@@ -103,10 +104,10 @@
             </div>
         </div>
         <div class="card">
-            <h1>Carro</h1>
+            <h1 class="animated infinite slideOutUp">Carro</h1>
             <div class="div-imagen">
 
-                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
+                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px">
                     <p style="text-align: left;">Tipo:terrestre</p>
                     <p style="text-align: left;">Marca:toyota</p>
                     <p style="text-align: left;">Color:Rojo</p>
@@ -124,7 +125,7 @@
         </div>
 
         <div class="card">
-            <h1>Trailer</h1>
+            <h1 class="animated infinite slideOutUp">Trailer</h1>
             <div class="div-imagen">
 
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
