--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/animaciones.css">
+    <link rel="stylesheet" href="animsition/src/css/animsition.css">
 </head>
 
 <body>
@@ -23,10 +24,10 @@
     </nav>
     <section>
         <div class="card">
-            <h1 class="animated infinite bounce delay-2s">Medios de Transporte Terrestre</h1>
+            <h1 style="font-size: 18px;" class="animated infinite bounce delay-2s">Medios de Transporte Terrestre</h1>
             <div class="div-imagen">
 
-                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
+                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px;">
                     Es el transporte que se realiza sobre la superficie terrestre. La gran mayoría de transportes terrestres se realizan sobre ruedas que podrían ser automóviles, autobuses, motocicletas, camiones, etc.
                 </div>
                 <img class="desvanecer" src="galeria/t1.png" width="350" height="350" />
@@ -38,38 +39,40 @@
             </div>
         </div>
         <div class="card">
-            <h1 class="animated infinite bounce bounceOut">Medios de Transporte Maritimos</h1>
-            <div class="div-imagen">
+            <h1 style="font-size: 18px;" class=" animated infinite bounce bounceOut ">Medios de Transporte Maritimos</h1>
+            <div class="div-imagen ">
 
-                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
+                <div style="text-align:center;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px; ">
                     Es el transporte que se realiza sobre la superficie terrestre. La gran mayoría de transportes terrestres se realizan sobre ruedas que podrían ser automóviles, autobuses, motocicletas, camiones, etc.
                 </div>
-                <img class="desvanecer" src="galeria/m1.jpg" width="350" height="350" />
+                <img class="desvanecer " src="galeria/m1.jpg " width="350 " height="350 " />
             </div>
-            <div class="botones">
+            <div class="botones ">
 
-                <a class="ver" href="TransportesM.html">ver mas</a>
+                <a class="ver " href="TransportesM.html ">ver mas</a>
 
             </div>
         </div>
 
-        <div class="card">
-            <h1 class="animated infinite bounceIn">Medios de Transporte Aereos</h1>
-            <div class="div-imagen">
+        <div class="card ">
+            <h1 style="font-size: 18px;" class="animated infinite bounceIn ">Medios de Transporte Aereos</h1>
+            <div class="div-imagen ">
 
-                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
+                <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px; ">
                     En el transporte de viajeros, se ha experimentado un claro aumento de los usuarios, debido tanto al aumento del número de plazas disponibles, como a la bajada de las tarifas aéreas, así como la diversificación de los destinos tanto a largo (más de 4000
                     Km) como a corto recorrido (alrededor de 1000 Km).
                 </div>
-                <img class="desvanecer" src="galeria/a1.jpg" width="350" height="350" />
+                <img class="desvanecer " src="galeria/a1.jpg " width="350 " height="350 " />
             </div>
-            <div class="botones"></div>
+            <div class="botones "></div>
 
-            <a class="ver" href="TransportesA.html">ver mas</a>
+            <a class="ver " href="TransportesA.html ">ver mas</a>
 
         </div>
         </div>
     </section>
+    <script src="jquery.js "></script>
+    <script src="animsition/dist/js/animsition.js "></script>
 </body>
 
 </html>
