Comentario de la funcionalidad

--- a/TransportesA.html
+++ b/TransportesA.html
@@ -16,6 +16,9 @@
 
     <br><br>
     <nav>
+        <!--Tenemos un menu para la navegacion de la pagina en la que tenemos las diferentes 
+    menus para poder navegar en la pagina.
+    -->
         <ul>
             <li><a class="active" href="index.html">Inicio</a></li>
             <li><a href="alquiler.html">Alquiler</a></li>
@@ -23,10 +26,12 @@
         </ul>
     </nav>
     <section>
+        <!--Tenemos una seccion y dentro de ese card  un div donde esta una imagen con transiciones.-->
+        <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
         <div class="card">
             <h1 class="animated infinite   bounceInDown" style="text-align: center; font-size: 18px;">Avion</h1>
             <div class="div-imagen">
-
+                <!--tenemos la descripcion en cada card de los transportes.-->
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
                     <p style="text-align: left;">Tipo:terrestre</p>
                     <p style="text-align: left;">Marca:toyota</p>
@@ -42,6 +47,7 @@
             </div>
         </div>
         <div class="card">
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
             <h1 style="font-size: 18px;" class="animated infinite bounceIn">Globo Aerostatico</h1>
             <div class="div-imagen">
 
@@ -63,6 +69,7 @@
         </div>
 
         <div class="card">
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
             <h1 style="font-size: 18px;" class="animated infinite bounceInRight">Parapente</h1>
             <div class="div-imagen">
 
@@ -86,6 +93,7 @@
     </section>
     <section>
         <div class="card">
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
             <h1 class="animated infinite bounceIn" style="text-align: center;">Avioneta</h1>
             <div class="div-imagen">
 
@@ -104,6 +112,7 @@
             </div>
         </div>
         <div class="card">
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
             <h1 class="animated infinite   bounceIn">Helicopetero</h1>
             <div class="div-imagen">
 
@@ -125,6 +134,7 @@
         </div>
 
         <div class="card">
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
             <h1 class="animated infinite bounceOut">Cohete</h1>
             <div class="div-imagen">
 
