Comentario del contenido

--- a/TransportesM.html
+++ b/TransportesM.html
@@ -13,6 +13,9 @@
 
 
     <br><br>
+    <!--Tenemos un menu para la navegacion de la pagina en la que tenemos las diferentes 
+    menus para poder navegar en la pagina.
+    -->
     <nav>
         <ul>
             <li><a class="active" href="index.html">Inicio</a></li>
@@ -21,10 +24,12 @@
         </ul>
     </nav>
     <section>
+        <!--Tenemos una seccion y dentro de ese card  un div donde esta una imagen con transiciones.-->
+        <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
         <div class="card">
             <h1 style="text-align: center;" class="animated infinite bounceOut">Barco</h1>
             <div class="div-imagen">
-
+                <!--tenemos la descripcion en cada card de los transportes.-->
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
                     <p style="text-align: left;">Tipo:terrestre</p>
                     <p style="text-align: left;">Marca:toyota</p>
@@ -40,7 +45,8 @@
             </div>
         </div>
         <div class="card">
-            <h1>Cabotaje</h1>
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
+            <h1 class="animated infinite bounceOut">Cabotaje</h1>
             <div class="div-imagen">
 
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
@@ -61,7 +67,8 @@
         </div>
 
         <div class="card">
-            <h1>Canoa</h1>
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
+            <h1 class="animated infinite bounceOut">Canoa</h1>
             <div class="div-imagen">
 
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
@@ -84,9 +91,10 @@
     </section>
     <section>
         <div class="card">
-            <h1 style="text-align: center;">Crucero</h1>
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
+            <h1 style="text-align: center;" class="animated infinite bounceOut">Crucero</h1>
             <div class="div-imagen">
-
+                <!--tenemos la descripcion en cada card de los transportes.-->
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
                     <p style="text-align: left;">Tipo:terrestre</p>
                     <p style="text-align: left;">Marca:toyota</p>
@@ -102,7 +110,8 @@
             </div>
         </div>
         <div class="card">
-            <h1>Submarino</h1>
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
+            <h1 class="animated infinite bounceOut">Submarino</h1>
             <div class="div-imagen">
 
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px;">
@@ -123,7 +132,8 @@
         </div>
 
         <div class="card">
-            <h1>velero</h1>
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
+            <h1 class="animated infinite bounceOut">velero</h1>
             <div class="div-imagen">
 
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px;">
