comente la pagina alquiler

--- a/alquiler.html
+++ b/alquiler.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="chosen_v1.8.7/chosen.css">
     <link rel="stylesheet" href="css/selec.css">
 
 </head>
 
 <body>
     <br><br>
+    <!--Tenemos un menu para la navegacion de la pagina en la que tenemos las diferentes 
+    menus para poder navegar en la pagina.
+    -->
     <nav>
         <ul>
             <li><a class="active" href="index.html">Inicio</a></li>
@@ -28,7 +30,7 @@
             <h2 style="text-align: center;" class="animated infinite slideInDown">Alquiler de Transportes Aereos</h2>
             <div class="contendor-formulario">
                 <div class="wrap">
-                    <!-- Formulario -->
+                    <!-- Formulario para que los clientes puedan alquilar la clase de vehiculos que ellos deseen-->
                     <form method="post" name="formulario_registro" class="formulario">
                         <div>
                             <div class="input-group">
