comente en contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -15,6 +15,9 @@
 
 
     <br><br>
+    <!--Tenemos un menu para la navegacion de la pagina en la que tenemos las diferentes 
+    menus para poder navegar en la pagina.
+    -->
     <nav>
         <ul>
             <li><a class="active" href="index.html">Inicio</a></li>
@@ -22,6 +25,9 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
+    <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
+    <!--Tenemos nuestro formulario contacto para que las personas quienes visiten nuestra pagina puedan enviarnos su duda o cualquier 
+    servicio de vehiculos que necesitan.-->
     <section>
         <div class="card">
             <h1 style="text-align: center;" class="logo animated infinite tada">Contactanos<span>Usuario</span></h1>
