comente el index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 
     <br><br>
+    <!--Tenemos un menu para la navegacion de la pagina en la que tenemos las diferentes 
+    menus para poder navegar en la pagina.
+    -->
     <nav>
         <ul>
             <li><a class="active" href="index.html">Inicio</a></li>
@@ -22,8 +25,11 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
+    <!--Tenemos una seccion y dentro de ese card  un div donde esta una imagen con transiciones.-->
+    <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
     <section>
         <div class="card">
+
             <h1 style="font-size: 18px;" class="animated infinite bounce delay-2s">Medios de Transporte Terrestre</h1>
             <div class="div-imagen">
 
@@ -38,8 +44,10 @@
 
             </div>
         </div>
+        <!--En el h1 llega la que es la clase de animate es un libreria de css-->
         <div class="card">
-            <h1 style="font-size: 18px;" class=" animated infinite bounce bounceOut ">Medios de Transporte Maritimos</h1>
+
+            <h1 style="font-size: 18.5px;" class=" animated infinite bounce bounceOut ">Medios de Transporte Maritimos</h1>
             <div class="div-imagen ">
 
                 <div style="text-align:center;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px; ">
@@ -53,9 +61,10 @@
 
             </div>
         </div>
-
+        <!--En el h1 llega la que es la clase de animate es un libreria de css-->
         <div class="card ">
-            <h1 style="font-size: 18px;" class="animated infinite bounceIn ">Medios de Transporte Aereos</h1>
+
+            <h1 style="font-size: 18.5px;" class="animated infinite bounceIn ">Medios de Transporte Aereos</h1>
             <div class="div-imagen ">
 
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px; ">
